[package]
name = "dungeon-apprentice"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
quick-xml = { version = "0.37.1", features = ["encoding"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.6.0"
xml_schema_generator = "0.6.18"
